jens/src/parser/snapshots/tests__template.tab_indented.snap
---
created: "2019-02-13T07:58:06.314381Z"
creator: insta@0.6.2
source: src/parser/template.rs
expression: templates
---
[
    Template {
        name: "main",
        indent_ignored: 1,
        lines: [
            TemplateLine {
                indentation: "\t",
                segments: [
                    Content(
                        "indent1"
                    )
                ]
            },
            TemplateLine {
                indentation: "\t\t",
                segments: [
                    Content(
                        "indent2"
                    )
                ]
            }
        ]
    }
]
